kubernetes/apps/network/doco-cd-webhook/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.clustrs.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app doco-cd-webhook
spec:
  hostnames:
    - "doco-cd-webhook.${DOMAIN_APP}"
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: *app
      matches:
        - path:
            type: Exact
            value: /v1/webhook
